Closed Bug 1059295 Opened 11 years ago Closed 10 years ago

sending the getUserMedia:revoke notification with the "screen:" prefix doesn't stop app sharing

Categories

(Core :: WebRTC: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla34

People

(Reporter: florian, Assigned: m_and_m)

References

Details

Attachments

(1 file)

Attempting to stop an app share from the chrome UI currently doesn't work. The icon in the urlbar will disappear, but the stream continues (and the global indicator stays displayed).
Assignee: nobody → linuxwolf
Status: NEW → ASSIGNED
Attachment #8480912 - Flags: review?(rjesup) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
During our exploratory testing from bug 1036653 comment 77 this issue was no longer reproducible using Firefox 34 beta 11 and latest Nightly across all platforms. Closing this issue as verified fixed.
Status: RESOLVED → VERIFIED
See Also: → 1142091
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: