Bug 1059295 - sending the getUserMedia:revoke notification with the "screen:" prefix doesn't stop app sharing r=jesup